force-app/main/default/objects/VentVersionCompatibility__c/VentVersionCompatibility__c.object-meta.xml
<CustomObject>
    <description>This table is created for Breathe Technologies, SW Upgrade Tool. This table maintains version compatibility between different Life2000 Ventilator SW versions along with the s19 image file.</description>
    <label>Vent Version Compatibility</label>
    <nameField>
        <label>SW Upgrade Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vent Version Compatibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>