force-app/main/default/objects/VentVersionCompatibility__c/fields/Minimum_SWUpgTool_Version__c.field-meta.xml
<CustomField>
    <fullName>Minimum_SWUpgTool_Version__c</fullName>
    <label>Minimum SW Upgrade Tool Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>1.1</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>