force-app/main/default/objects/VentVersionCompatibility__c/fields/SW_Start_Version__c.field-meta.xml
<CustomField>
    <fullName>SW_Start_Version__c</fullName>
    <label>SW Start Version</label>
    <length>11</length>
    <type>Text</type>
</CustomField>